--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "rewrites": [ {
+    "source": "/",
+    "destination": "/"
+  } ],
+  "public": true
 }
